added footer spacing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <div class="wrapper"></div>
 <div class="all">
     <header> 
         header
@@ -28,6 +29,7 @@
     </section>
 <aside id="aside">aside</aside>
 <footer>footer</footer>
+</div>
 </div>
 </body>
 </html>
