--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </article>
     </section>
 <aside id="aside">aside</aside>
-<footer>footer</footer>
+<footer id="footer">footer</footer>
 </div>
 </div>
 </body>
